ipad header alignment issue

--- a/css/hpit.css
+++ b/css/hpit.css
@@ -1524,12 +1524,14 @@ img {
 }
 /*********************************  end Limelight overlay  *******************************/
 /*********************************  responsive  ******************************************/
+/* galaxy s4 */
+@media only screen and (-webkit-device-pixel-ratio: 3) and (device-width: 640px) and (device-height: 360px) {
+	.navbar-default {
+		display: none !important;
+	}
+}
 /* less than 767px wide */
-@media only screen and (max-width : 767px), 
-only screen and (-webkit-device-pixel-ratio: 2) and (min-device-width : 360px) and (max-device-width : 720px), 
-only screen and (-webkit-device-pixel-ratio: 2) and (max-device-width : 720px) and (orientation : portrait), 
-only screen and (-webkit-device-pixel-ratio: 2) and (max-device-width : 1280px) and (orientation : landscape),
-only screen and (-webkit-device-pixel-ratio: 3) and (device-width: 320px) and (device-height: 640px) {
+@media only screen and (max-width : 767px), only screen and (-webkit-device-pixel-ratio: 2) and (min-device-width : 360px) and (max-device-width : 720px), only screen and (-webkit-device-pixel-ratio: 2) and (max-device-width : 720px) and (orientation : portrait), only screen and (-webkit-device-pixel-ratio: 2) and (max-device-width : 1280px) and (orientation : landscape) {
 	.container > .navbar-header,
 	.container > .navbar-collapse {
 		margin: 0;
